style(ship-table): prevent hover occlusion on resizer by setting th default z-index to auto

--- a/projects/ship-ui/ship-table/ship-table.scss
+++ b/projects/ship-ui/ship-table/ship-table.scss
@@ -273,7 +273,7 @@ $shipTable: true !default;
       border-width: var(--table-th-bw);
       background: var(--table-th-bg);
       gap: var(--table-th-g);
-      z-index: 100;
+      z-index: auto;
 
       &:hover {
         z-index: 120;
